--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "Transpile ES2015 classes to optimized code.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "ava -v",
+    "test": "jest __tests__/index.test.js",
     "build": "tsc"
-  },
-  "ava": {
-    "compileEnhancements": true
   },
   "repository": {
     "type": "git",
@@ -32,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/helper-plugin-test-runner": "^7.1.0",
     "@babel/traverse": "^7.1.6",
     "@types/babel__core": "^7.0.1",
     "@types/babel__generator": "^7.0.0",
@@ -39,7 +37,7 @@
     "@types/babel__template": "^7.0.0",
     "@types/babel__traverse": "^7.0.0",
     "@types/node": "^10.12.8",
-    "ava": "^0.25.0",
+    "jest": "^23.6.0",
     "typescript": "^3.1.6"
   }
 }
