--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest __tests__/index.test.js",
+    "bench": "NODE_ENV=benchmark matcha __tests__/index.test.js",
     "build": "tsc"
   },
   "repository": {
@@ -34,7 +35,9 @@
     "@types/babel__template": "^7.0.0",
     "@types/babel__traverse": "^7.0.0",
     "@types/node": "^10.12.8",
+    "babel-preset-minify": "^0.5.0",
     "jest": "^23.6.0",
+    "matcha": "^0.7.0",
     "typescript": "^3.1.6"
   }
 }
